--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,10 @@
   Get List Bot
 </button>
 
+<button (click)="getBotList2()" class="button is-primary">
+  Get List Bot 2
+</button>
+
 <button (click)="getAccountList()" class="button is-primary">
   Get Account List
 </button>
